# monitoring-bot

./: LICENSE  README.md  monitoring-bot-on-boot.service  monitoring-bot-on-start.service  pyproject.toml
src/: bot.py  config.py  on_boot.py
systemctl/: monitoring-bot-on-boot.service  monitoring-bot.service
